# real-time-timescaledb

./: .env  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
src/: data_ingestion.py  get_latest_values.py
